# sudokugen

./: .gitignore  build_exe.bat  kukoku.py  pyproject.toml
indesign/: fill_sudoku.jsx
puzzles/: 2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json
src/sudokugen/: __init__.py  classifier.py  cli.py  dlx.py  generator.py  grid.py  output.py  pdf.py  pipeline.py  quality.py  remover.py  solver.py  types.py
src/sudokugen/techniques/: __init__.py  fish.py  intersections.py  singles.py  subsets.py  uniqueness.py  wings.py
tests/: test_dlx.py  test_generator.py  test_grid.py  test_pipeline.py  test_quality.py  test_remover.py  test_solver.py  test_techniques.py
